Fix IE9 layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -161,7 +161,6 @@ a:visited {
 }
 .speaker-photo {
     width: 160px;
-    display: block;
     margin: 0 auto;
 }
 .speaker-info {
@@ -232,7 +231,7 @@ a:visited {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 10;
     padding-left: 0.5em;
     padding-right: 0.5em;
     color: #fff;
